<resources>
    <string name="app_name">AndroBim 7</string>
    <string name="name">Ebinazar Rapalli</string>
    <string name="mail">ebinazart@gmail.com</string>
    <string name="phone">+91 9527630487</string>
    <string name="group">Add to Group</string>
    <string name="comments">Show all Comments</string>
    <string name="photos">Photos</string>
    <string name="picnos">112</string>
    <string name="follower">Followers</string>
    <string name="follow">259</string>
    <string name="follwing">Following</string>
    <string name="followlist">320</string>
    <string name="misson_acomplished">Misson Acomplished</string>
    <string name="androbim_7">AndroBim 7</string>
    <string name="Task1_text">Overlap with Constraint Layout| Profile UI</string>
    <string name="more_to_come">More to Come</string>
    <string name="Tast2_text">Multiple Linear Layouts to show Grids |Nested Linear Layouts</string>
    <string name="Task3_text">Implementation of ScrollView with Fixed Button at the Bottom| Frame Layout</string>
    <string name="Task4_txt">Toast message from input in EditText| Relative Layout</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="listview_adapters">ListView | Adapters</string>

</resources>