<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"

        android:layout_weight="0.2"
        android:background="#FADFD0">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_baseline_android_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/androbim_7"
                android:textColor="#800F74"
                android:textSize="32sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/name"
                android:textColor="#800F74"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F8DDCE">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/frame_shape"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:height="50dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/Task1_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/task1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/ic_baseline_phone_android_24" />



            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/frame_shape"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:height="50dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/Tast2_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/task2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/ic_baseline_phone_android_24" />



            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/frame_shape"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:height="50dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/Task3_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/task3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/ic_baseline_phone_android_24" />



            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/frame_shape"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:height="50dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/Task4_txt"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/task4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_phone_android_24"
                    android:layout_marginTop="18dp"
                    android:layout_gravity="right"/>



            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/frame_shape"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:height="50dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/more_to_come"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_phone_android_24"
                    android:layout_marginTop="18dp"
                    android:layout_gravity="right"/>



            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/frame_shape"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:height="50dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/more_to_come"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_phone_android_24"
                    android:layout_marginTop="18dp"
                    android:layout_gravity="right"/>



            </FrameLayout>
        </LinearLayout>

    </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/black"
        android:layout_weight="0.2">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/misson_acomplished"
        />

    </LinearLayout>



</LinearLayout>

